--- a/src/CiteMe.Web/appsettings.json
+++ b/src/CiteMe.Web/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "SqlMainConnection": "LAPTOP-RLVJB85H\\SQLEXPRESS;Database=CiteMeDB;Integrated Security=True;TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
