--- a/src/CiteMe.Web/appsettings.json
+++ b/src/CiteMe.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SqlMainConnection": "LAPTOP-RLVJB85H\\SQLEXPRESS;Database=CiteMeDB;Integrated Security=True;TrustServerCertificate=True"
+    "SqlMainConnection": "Server=LAPTOP-RLVJB85H\\SQLEXPRESS;Database=CiteMeDB;Integrated Security=True;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
