--- a/src/CiteMe.Application/CiteMe.Application.csproj
+++ b/src/CiteMe.Application/CiteMe.Application.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CiteMe.Persistence\CiteMe.Persistence.csproj" />
+  </ItemGroup>
+
 </Project>
