--- a/src/CiteMe.Web/CiteMe.Web.csproj
+++ b/src/CiteMe.Web/CiteMe.Web.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CiteMe.Application\CiteMe.Application.csproj" />
     <ProjectReference Include="..\CiteMe.Persistence\CiteMe.Persistence.csproj" />
   </ItemGroup>
 
